<resources>

    <!-- Home -->
    <string name="app_name" translatable="false">RoxGPS</string>
    <string name="xposed_desc" translatable="false">A Rox GPS based on the Xposed framework.</string>
    <string name="roxgps_service_desc">Allows binding to the pek location service provided by RoxGPS app.</string>
    <string name="search">Search</string>
    <string name="address">United States</string>
    <string name="favorites">Favorites</string>
    <string name="address_not_found">Address not found</string>
    <string name="cant_save">Gagal menyimpan</string>
    <string name="location_set">Location set</string>
    <string name="title">Location set notification</string>
    <string name="des">Show notification when location is set</string>
    <string name="location_unset">Location unset</string>
    <string name="no_internet">No Internet</string>
    <string name="getlocation_desc">Get current location</string>
    <string name="addfavorite_desc">Add favorite</string>

    <!-- Errors -->
    <string name="error_xposed_module_missing">Xposed module is not enabled</string>
    <string name="error_xposed_module_missing_desc">Enable this module in LSPosed Manager</string>
    <string name="location_error">Lokasi error </string>
    <string name="invalid_location">Lokasi belum ditentukan </string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_info">Brought to you by \n@rox (2024–2025) (2022–2023) \n\nA GPS setter based on the Xposed framework.</string>

    <!-- Update -->
    <string name="download_manager_description">Downloading update</string>
    <string name="update_button">Update</string>
    <string name="update_available">Update available</string>
    <string name="bs_update_download_failed">Failed</string>


    <!-- Dialog -->
    <string name="add_fav_dialog_title">Add favorite</string>
    <string name="dialog_button_add">Add</string>
    <string name="save">Save</string>

    <!-- SettingActivity -->
    <string name="xposed">Xposed</string>
    <string name="settings">Settings</string>
    <string name="settings_of_accuracy">Accuracy</string>
    <string name="preference_category_general">General</string>
    <string name="enter_valid_input">Enter a valid number</string>
    <string name="delete_favorite_item">Delete favorite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="check_update">Check for updates</string>
    <string name="check_update_summary">Automatically check the latest version from GitHub</string>
    <string name="enable_joystick">Use joystick</string>
    <string name="enable_joystick_summary">Control your location with a joystick (experimental)</string>
    <string name="advanced_hook">Hook system location</string>
    <string name="advanced_summary">Hook system for better location setting (reboot required)</string>
    <string name="random_position">Random location</string>
    <string name="random_position_summary">Use a random location around the set location</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="app_update_failed">Update failed</string>
    <string name="dark_theme">Dark theme</string>

    <!-- notifications -->
    <string name="stop">Stop</string>

    <string name="dialog_button_cancel">Cancel</string>
    <string name="location_service_disabled">Aktifkan lokasi</string>
    <string name="activate">Activate</string>
    <string name="location_not_select">Lokasi belum di tentukan</string>
    <string name="dialog_button_close">Close</string>
    <string name="bs_update_download_completed">Download complete</string>
    <string name="token_loading">Token: Loading…</string>
    <string name="_0">0%</string>
    <string name="update_downloading">Download update</string>
    <string name="pref_system_hooked_title">System Hooked</string>
    <string name="pref_random_position_title">Random posisi</string>
    <string name="pref_accuracy_level_title">Level Akurasi</string>
    <string name="pref_map_type_title">Map tipe</string>
    <string name="pref_dark_theme_title">Tema gelap</string>
    <string name="pref_update_disabled_title">Update disable</string>
    <string name="pref_joystick_enabled_title">Aktifkan joystick</string>
    <string name="back_to_app">Kembali ke aplikasi</string>
    <string name="nav_fav_title">nav_fav_title</string>
    <string name="nav_about_title">nav_about_title</string>
    <string name="nav_update_title">nav_update_title</string>
    <string name="nav_clear_log_title">nav_clear_log_title</string>
    <string name="nav_view_log_folder_title">nav_view_log_folder_title</string>
    <string name="nav_token_title">nav_token_title</string>
    <string name="nav_exit_title">nav_exit_title</string>
    <string name="token_not_available">token_not_available</string>
    <string name="search_hint">search_hint</string>
    <string name="alamat_favorit">Contoh Alamat Favorit</string>
    <string name="app_logo_description">app_logo_description</string>
    <string name="content_desc">TODO</string>
    <string name="delete_favorite">delete_favorite</string>
    <string name="title_activity_map_view_composable">MapViewComposable</string>
    <string name="title_activity_google_map_composable">GoogleMapComposable</string>
    <string name="notification_channel_title">GPS Active</string>
    <string name="search_error_generic">unknown error</string>
    <string name="token_dialog_title">Token</string>
    <string name="dialog_button_ok">Okay</string>
    <string name="no_internet_connection_or_service_unavailable">no internet connection or service unavailable</string>
</resources>