<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_gravity="center_vertical"> <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_downloading" android:textAppearance="?attr/textAppearanceTitleMedium"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/update_download_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false" android:progress="0" app:trackCornerRadius="4dp"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/update_download_progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0" android:textAppearance="?attr/textAppearanceBodyMedium"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/update_download_cancel"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialog_button_cancel"/> </LinearLayout>
